--- a/_alerts.scss
+++ b/_alerts.scss
@@ -1,1 +1,1 @@
-Could not load content for https://www.resideo.com/areas/resideo/scss/bootstrap/bootstrap/mixins/_alerts.scss (HTTP error: status code 404, net::ERR_HTTP_RESPONSE_CODE_FAILURE)
+https://www.resideo.com/areas/resideo/scss/bootstrap/bootstrap/mixins/_alerts.scss
